src/objects/ChangeComment__c.object
<CustomObject>
    <fields>
        <fullName>Change__c</fullName>
        <label>Change</label>
        <referenceTo>Change__c</referenceTo>
        <relationshipLabel>Comments</relationshipLabel>
        <relationshipName>Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commented By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommentedTime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commented Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ViewLink__c</fullName>
        <formula>HYPERLINK( Id , &quot;Open&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Change Comment</label>
    <nameField>
        <displayFormat>CC-{0000000000}</displayFormat>
        <label>Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>